# split_or_steal

./: Anchor.toml  package.json
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: ShaderCanvas.tsx  WalletProviders.tsx  globals.css  layout.tsx  page.tsx  useChoiceStore.tsx  walletIcon.tsx  wtf.tsx
frontend/src/app/components/: Footer.tsx  GameResultModal.tsx  MintProgress.tsx
frontend/src/app/web_target/: split_or_steal.ts
program/: .gitignore  justfile
program/programs/split_or_steal/: Cargo.toml
program/programs/split_or_steal/src/: error.rs
program/programs/split_or_steal/src/instructions/: initialize_vault.rs  mod.rs
program/programs/split_or_steal/src/state/: game_vault.rs  mod.rs
program/scripts/: create_and_mint.ts  play_game.ts  revoke_auth_and_init_vault.ts  upload_metadata.ts
program/tests/: split_or_steal.ts
programs/split_or_steal/src/: lib.rs
programs/split_or_steal/src/instructions/: play_game.rs
programs/split_or_steal/src/state/: player_profile.rs
scripts/: setup.ts
